--- a/src/components/store/store.css
+++ b/src/components/store/store.css
@@ -8,14 +8,18 @@
         flex-wrap: wrap;
 }
 
+
 .modal{
     margin-top: 14rem;
     width: 100vw;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    left: 0;
+    top: -14rem;
    background-color: rgb(240, 238, 236);
    min-height: 100vh;
    z-index: 10;
+   align-items: center;
+   flex-direction: column;
 }
 
 .modalHead{
@@ -23,6 +27,7 @@
     align-items: center;
     padding:  1rem;
     background: white;
+    width: 100%;
 }
 .modalTitle{
     margin: 0 auto;
@@ -48,40 +53,53 @@ input{
 .com-btn{
     background-color: rgb(153, 162, 209);
     padding: 0.5rem;
-    width: 100%;
     cursor: pointer;
-    border-radius: 0 0 0.5rem 0.5rem;
+    border-radius:  1.5rem;
+    margin: 0.3rem;
+
 
 }
 
-
+.form-store{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
 button {
     border: none;
 }
 
 .product-card {
-    width: 400px;
     background-color: #fff;
     border-radius: 1rem;
+    margin: 1rem;
+    padding: 0.5rem;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
   }
   
   .product-img-container {
-    width: 100%;
-    position: relative;
+    width: 20%;
     overflow: hidden;
     border-radius:1rem 1rem 0 0  ;
   }
   
   .product-img {
     width: 100%;
-    height: 300px;
    object-fit: cover;
+   border-radius: 50%;
+
   }
   
   .product-info {
     padding: 20px;
+    width: 60%;
+    
   }
   
   .product-title {
@@ -97,5 +115,45 @@ button {
   
   .product-price {
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 600;
+    background-color: cornflowerblue;
+    color: white;
+    width: fit-content;
+    border-radius: 1rem;
+    padding: 0.3rem 1rem;
+  }
+
+  .open{
+    background: #41C4AF;
+    color: white;
+    border: none;
+   
+    padding: 0 1rem;
+    border-radius: 2rem;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+  }
+.open-mobile{
+  background-color:rgb(190, 218, 241) ;
+  color: navy ;
+  font-weight: 600;
+  border: none;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  border-radius: .5rem;
+  cursor: pointer;
+  padding: 0.5rem 3rem;
+  margin: 0.3rem;
+}
+  @media screen and (max-width:940px) {
+    .open{
+        display: none;
+    }
+    .open-mobile {
+      display: flex;
+
+    }
+    
   }
