--- a/src/components/store/store.css
+++ b/src/components/store/store.css
@@ -10,15 +10,11 @@
 
 
 .modal{
-    margin-top: 14rem;
     width: 100vw;
-    position: fixed;
-    left: 0;
-    top: -14rem;
+
    background-color: rgb(240, 238, 236);
-   min-height: 100vh;
-   z-index: 10;
-   align-items: center;
+   display: flex;
+  
    flex-direction: column;
 }
 
@@ -30,12 +26,11 @@
     width: 100%;
 }
 .modalTitle{
-    margin: 0 auto;
+    margin: 1rem;
 }
 .modalClose
 {
-    padding: 0.5rem 1rem;
-    margin: 0.rem;
+    padding: 0.5rem ;
     background-color: darkseagreen;
     color: white;
     border-radius: 0.5rem;
@@ -57,8 +52,18 @@ input{
     border-radius:  1.5rem;
     margin: 0.3rem;
     color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.com-btn:disabled{
+  background-color: #fff;
+  outline: 2px solid rgb(14, 70, 183);
+}
 
-
+.sell{
+  background-color:  rgb(25, 201, 43) ;
 }
 
 .form-store{
@@ -124,40 +129,8 @@ button {
     padding: 0.3rem 1rem;
   }
 
-  .open{
-    background: #41C4AF;
-    color: white;
-    border: none;
-   
-    padding: 0 1rem;
-    border-radius: 2rem;
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-  }
-.open-mobile{
-  background-color:rgb(190, 218, 241) ;
-  color: navy ;
-  font-weight: 600;
-  border: none;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  padding: 0 1rem;
-  border-radius: .5rem;
-  cursor: pointer;
-  padding: 0.5rem 3rem;
-  margin: 0.3rem;
-}
-  @media screen and (max-width:940px) {
-    .open{
-        display: none;
-    }
-    .open-mobile {
-      display: flex;
+ 
 
-    }
-    
-  }
 
   .com-a{
     background-color: rgb(153, 230, 121);
@@ -167,3 +140,69 @@ button {
     margin: 0.3rem;
     color: #fff;
   }
+
+  .location{
+    width: 40px;
+    height: 40px;
+    background-color: gainsboro;
+    margin-left: -20px;
+    margin-right: 10px;
+    padding: 10px;
+    border-radius: 50%;
+    background: white;
+    outline:1.5px solid blue;
+    cursor: pointer;
+  }
+
+  .location img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  .loc{
+    display: flex;
+    align-items: center;
+  }
+  /*Huge thanks to @tobiasahlin at http://tobiasahlin.com/spinkit/ */
+.spinner {
+  
+  text-align: center;
+}
+
+.spinner > div {
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  background-color: #4c42bb;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
