--- a/src/components/store/store.css
+++ b/src/components/store/store.css
@@ -80,9 +80,10 @@ button {
 .product-card {
     background-color: #fff;
     max-width: 60rem;
+    width: 80%;
     border-radius: 1rem;
     margin: 1rem;
-    padding: 0.5rem;
+    padding: 2rem 0.5rem;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
@@ -92,20 +93,22 @@ button {
   }
   
   .product-img-container {
-    width: 20%;
+    width: 10rem;
+    height: 10rem;
     overflow: hidden;
     border-radius:1rem 1rem 0 0  ;
   }
   
   .product-img {
     width: 100%;
-   object-fit: cover;
+    height: 100%;
+   object-fit: fill;
    border-radius: 50%;
 
   }
   
   .product-info {
-    padding: 20px;
+    padding: 2rem;
     width: 60%;
     
   }
