--- a/src/components/partners/partners.css
+++ b/src/components/partners/partners.css
@@ -22,15 +22,14 @@
 }
 
 .partnersTitle{
-    width: calc(92% - 6rem);
+    width: 100% !important;
+
     text-align: center;
     
     font-weight: 600;
     padding: 0.5rem ;
-    margin: 0 3rem ;
     margin-bottom: 0.5rem;
     color:  #51ca94;
-    border-bottom: 1px solid  rgb(193, 186, 186);
     overflow: hidden;
 }
 @media screen and (max-width:640px) {
