--- a/src/components/coproduits/coProduits.css
+++ b/src/components/coproduits/coProduits.css
@@ -125,7 +125,7 @@
     gap: 1rem;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: start;
     justify-content: space-between;
 }
 
@@ -180,9 +180,10 @@
     margin-top: 1rem;
 }
 
-.coproductMarin3 > div > h4:hover +img{
+.coproductMarin3 > div:hover > img{
    scale: 1.2;
    margin-top: 20px;
+   transition: all 0.5s;
    
 }
 @media screen and (max-width:550px) {
