--- a/src/components/partners/partners.css
+++ b/src/components/partners/partners.css
@@ -56,12 +56,21 @@
     border-style: solid;
     border-image: linear-gradient(to right, darkblue, rgb(107, 255, 243)) 1;
 }
-
+.partner:hover{
+    background:  linear-gradient(to right, darkblue, rgb(107, 255, 243));
+    cursor:  pointer;
+    scale: 1.2;
+    border: none;
+    color: white;
+    box-shadow: 10px 10px 10px gray ;
+    transition: all 0.5s;
+}
 .partnerImg{
     object-fit: scale-down;
     width: 50%;
     height: 50%;
     padding: 0.3rem;
+    background-color: white;
 }
 .partnerName{
     word-break: break-all;
