--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -13,6 +13,8 @@
     z-index: 3;
     box-shadow: 0px 10px 20px -3px rgba(152,198,224,1);
 }
+
+
 @media screen and (max-width:500px) {
     #navbar{
        
@@ -60,7 +62,7 @@
     cursor: pointer;
 
 }
-.desktopMenulistItem:hover{
+.desktopMenulistItem:hover,.active{
     color: cornflowerblue;
     font-weight: 500;
     padding: 0.5rem 0.5rem;
