--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -10,6 +10,16 @@
 
 }
 
+@media screen and (max-width:650px) {
+    .plan .planImg{
+        width: 95% !important;
+       
+        padding: 0;
+        margin: 0.5rem 0;
+
+}
+}
+
 @media screen and (max-width:500px) {
     #about{
        
@@ -44,6 +54,7 @@
 
     .plan{
         padding: 5px !important;
+       
     }
 
     .plan .planTitle{
@@ -54,7 +65,8 @@
         text-align:left;
     }
     .plan .planImg{
-            width: 100%;
+            width: 95% !important;
+           
             padding: 0;
             margin: 0.5rem 0;
 
@@ -99,6 +111,7 @@
     flex-direction: column;
 }
 .objTitle{
+    
     color: #41C4AF;
     margin: 1rem 0;
 }
@@ -153,13 +166,22 @@
     padding: 1rem;
     display: flex;
     width: 100%;
-    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1rem;
+
     align-items: center;
     justify-content: center;
 }
 
+
+.plan .planTitle{
+    width: 100%;
+   
+    text-align:center;
+}
+
 .planImg{
-    width: 95%;
+    width: 45%;
     border: 2px solid #41C4AF;
     object-fit: cover;
     border-radius: 2rem;
