links ,cartes ,bac

--- a/src/components/coproduits/coProduits.css
+++ b/src/components/coproduits/coProduits.css
@@ -89,7 +89,7 @@
 
 }
 
-.coproductMarin2 > div > h4{
+.coproductMarin2 > div > .prod{
     width: 100%;
     height: 50%;
     border-radius: 1.5rem;
@@ -108,7 +108,7 @@
 }
 
 
-.coproductMarin2 > div > h4:hover{
+.coproductMarin2 > div > .prod:hover{
     transform: skewY(5deg);
     color: blue;
     background: white;
