--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content:space-between;
     position: sticky;
-    top: 0;
+    top: 6rem;
     z-index: 3;
     box-shadow: 0px 10px 20px -3px rgba(152,198,224,1);
 }
